# solomon-x1

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  blueprint.html  index.html  metadata.json  package-lock.json  package.json  perf_test.cjs  pnpm-lock.yaml  requirements.txt  server.test.ts  server.ts  test_ws_client.py  tsconfig.json  vite.config.ts  vitest.config.ts
.Jules/: palette.md
.github/workflows/: build.yml  ci.yml  webpack.yml
.jetro/: cache.duckdb  mcp-config.json
.jules/: bolt.md  sentinel.md
PROJECT SOLOMON — The Cognitive Presence System_files/: css2
backend/: conversation.py  rings_config.json  ws_handlers.py
backend/tests/: test_ws_handlers.py
docs/: SOLOMON_X_MASTER_ROADMAP_v2.md
public/css/: style.css
public/js/: boot.js  phase2.js  phase3.js  solomon-ws.js  warp.js
scripts/: bootstrap_token.ps1
solomon-x/: package-lock.json
solomon-x/backend/: __init__.py  config.py  ws_handlers.py
solomon-x/crates/auth/: Cargo.toml  handshake.rs
solomon-x/crates/auth/src/: handshake.rs
solomon-x/crates/bus/: Cargo.toml
solomon-x/crates/ledger/: Cargo.toml
solomon-x/crates/sandbox/: Cargo.toml
solomon-x/crates/sovereignty/: Cargo.toml
solomon-x/docs/: SOLOMON_X_ARCHITECTURE_GUIDE.md  SOLOMON_X_AVATAR_VOICE_ENHANCEMENTS.md  SOLOMON_X_ENHANCEMENT_REVIEW.md  SOLOMON_X_MASTER_PLAN.md  current_vs_spec_analysis.md
solomon-x/memory/hot/: sqlite_cache.py
solomon-x/memory/warm/: lancedb_store.py
solomon-x/models/providers/: phi3.py
solomon-x/orchestrator/: decision_engine.py  planner.py
solomon-x/orchestrator/tests/: test_orchestrator.py
solomon-x/persona/: conversation_style.py
solomon-x/python/anticipatory/: hood.py
solomon-x/python/cognitive_twin/: tracker.py
src/: App.test.tsx  App.tsx  index.css  main.tsx  types.ts
src/components/: AppErrorBoundary.tsx  AvatarCorePanel.test.tsx  AvatarCorePanel.tsx  CogniciencyRadar.tsx  CognitiveRingNetworkMap.tsx  Layer0Firewall.test.tsx  MemoryCortex.tsx  SolomonOSComponents.test.tsx  SolomonOSComponents.tsx  SovereignConsole.test.tsx  SovereignConsole.tsx  StateTracker.tsx  ThreeCanvas.tsx  TrustTerminal.test.tsx  TrustTerminal.tsx
src/hooks/: useWebSocket.ts
src/solomon/phase1/: agents.ts  (+10 more)
src/tests/: App.test.tsx  predict.test.ts  setup.ts
src/utils/: proficiencies.ts
temp_import/: .gitignore  PROJECT SOLOMON — The Cognitive Presence System.html
temp_import/.cursor/: mcp.json
temp_import/crates/auth/: Cargo.toml
temp_import/crates/ledger/: Cargo.toml
temp_import/crates/sovereignty/: Cargo.toml
temp_import/solomon-x/: Cargo.toml  README.md  main.js  package.json
temp_import/solomon-x/.jules/: bolt.md
temp_import/solomon-x/agents/: registry.py
temp_import/solomon-x/backend/: ollama_client.py  ring_engine.py
temp_import/solomon-x/context/: context_builder.py  context_compressor.py
temp_import/solomon-x/core/: service_registry.py
temp_import/solomon-x/crates/auth/src/: lib.rs
temp_import/solomon-x/crates/bus/src/: envelope.rs  unix_socket.rs
temp_import/solomon-x/crates/ledger/src/: lib.rs
temp_import/solomon-x/crates/sandbox/src/: lib.rs
temp_import/solomon-x/crates/solomon-daemon/: Cargo.toml
temp_import/solomon-x/crates/solomon-daemon/src/: main.rs
temp_import/solomon-x/knowledge/graph/: entities.py
temp_import/solomon-x/memory/learning/: pattern_miner.py
temp_import/solomon-x/models/: router.py
(+27 files in other folders)
