[workspace]
members = [
    "crates/auth",
    "crates/bus",
    "crates/sandbox",
    "crates/ledger",
    "crates/sovereignty",
    "crates/solomon-daemon"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Solomon X Contributors"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
ed25519-dalek = "1.0.1"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"