[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# External
tss-esapi = "0.10"
ed25519-dalek = "2.0"
hkdf = "0.12"
rand = "0.8"