[package]
name = "sovereignty"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# External
rsa = "0.8"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"